fix: Social media icons alignment

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ li {
   list-style: none;
   justify-content: center;
   padding: 0;
+  align-items: center;
 }
 
 .social-medias ul li {
